<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    android:orientation="vertical"
    android:focusable="false">

     <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
         />
	<EditText 
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText"
           />
	<Button 
        android:id="@+id/songIdButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/songIdButton"
        android:textColor ="#FFFFFF" />
    <Button 
        android:id="@+id/displayButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/displayAll"
        android:textColor ="#FFFFFF" />
    <Button 
        android:id="@+id/siteButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/site"
        android:textColor ="#FFFFFF" />
     <ListView 
        android:id="@+id/songList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="false"
        />
</LinearLayout>
