<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
 <TextView 
     android:id="@+id/albumHeader"
     android:text="@string/album"
     android:layout_weight="1"
     android:layout_width="0dip"
     android:paddingLeft="5dp"
     android:layout_height="wrap_content"
     android:textStyle="bold"
     android:textColor ="#FFFFFF"
     />   
 <TextView 
     android:id="@+id/songHeader"
     android:text="@string/song"
     android:layout_weight="2"
     android:layout_width="0dip"
     android:paddingLeft="5dp"
     android:layout_height="wrap_content"
     android:textStyle="bold"
     android:textColor ="#FFFFFF"
     /> 
 <TextView 
     android:id="@+id/trackHeader"
     android:text="@string/track"
     android:layout_weight="1"
     android:layout_width="0dip"
     android:paddingLeft="5dp"
     android:layout_height="wrap_content"
     android:textStyle="bold"
     android:textColor ="#FFFFFF"
     /> 

</LinearLayout>
